Update package controller + Migrate files

--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Packages#index</h1>
 <p>Find me in app/views/packages/index.html.erb</p>
+
+
+<%# Important IF and Else buttons %>
+<%# <% if current_user.role == "agant"%> %>
+<%# <%= link_to  "Your Account", edit_user_registration_path %> %>
+<%# <%= link_to  "Your Account", edit_user_registration_path %> %>
+<%# <%end%> %>
