--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -2,8 +2,6 @@
 <p>Find me in app/views/packages/index.html.erb</p>
 
 
-<%# Important IF and Else buttons %>
-<%# <% if current_user.role == "agant"%> %>
-<%# <%= link_to  "Your Account", edit_user_registration_path %> %>
-<%# <%= link_to  "Your Account", edit_user_registration_path %> %>
-<%# <%end%> %>
+<%= link_to  "Sign Up", new_user_registration_path %>
+<%= link_to  "Sign In", new_user_session_path %>
+<%= link_to  "Sign Out", destroy_user_session_path, method: :delete %>
