--- a/app/views/packages/_form.html.erb
+++ b/app/views/packages/_form.html.erb
@@ -20,6 +20,18 @@
     </div>
     <div class="form-group">
       <div class="input-field col s6">
+        <%= f.label :start_date, "Start Date", class: "lead text-white" %>
+        <%= f.date_field :start_date, class: "form-control", placeholder: "Start Date" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="input-field col s6">
+        <%= f.label :end_date, "End Date", class: "lead text-white" %>
+        <%= f.date_field :end_date, class: "form-control", placeholder: "End Date" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="input-field col s6">
         <%= f.label :price, "Price", class: "lead text-white" %>
         <%= f.number_field :price, class: "form-control", placeholder: "Price" %>
       </div>
