--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -1,6 +1,51 @@
 <h1>Packages#index</h1>
 <p>Find me in app/views/packages/index.html.erb</p>
 
+<hr>
+<h1>Packages</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Image</th>
+      <th>Price</th>
+      <th>Start Date</th>
+      <th>End Date</th>
+      <th>User ID</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @packages.each do |package| %>
+      <tr>
+        <td><%= package.id %></td>
+        <td><%= package.name %></td>
+        <td><%= package.description %></td>
+        <td><%= image_tag(package.image, size: "150x150", alt: "City Image") %></td>
+        <td><%= package.price %></td>
+        <td><%= package.start_date %></td>
+        <td><%= package.end_date %></td>
+        <td><%= package.user_id %></td>
+        <td>
+          <%= link_to 'Show', package %>
+          <br>
+          <%= link_to 'Edit', edit_package_path(package) %>
+          <br>
+
+
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Package', new_package_path %>
+<hr>
 
 <%= link_to  "Sign Up", new_user_registration_path %>
 <%= link_to  "Sign In", new_user_session_path %>
