--- a/app/views/packages/_form.html.erb
+++ b/app/views/packages/_form.html.erb
@@ -1,41 +1,53 @@
 <div class="w-25 mx-auto">
   <%= form_for @package do |f| %>
     <div class="form-group">
-      <div class="input-field col s6">
-        <%= f.label :name, "Name", class: "lead text-white" %>
-        <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
-      </div>
+      <%= f.label :name, "Name", class: "lead text-dark" %>
+      <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
     </div>
     <div class="form-group">
-      <div class="input-field col s6">
-        <%= f.label :description, "Description", class: "lead text-white" %>
-        <%= f.text_field :description, class: "form-control", placeholder: "Description" %>
-      </div>
+      <%= f.label :description, "Description", class: "lead text-dark" %>
+      <%= f.text_field :description, class: "form-control", placeholder: "Description" %>
     </div>
     <div class="form-group">
-      <div class="input-field col s6">
-        <%= f.label :image, "Image", class: "lead text-white" %>
-        <%= f.text_field :image, class: "form-control", placeholder: "Image" %>
-      </div>
+      <%= f.label :image, "Image", class: "lead text-dark" %>
+      <%= f.text_field :image, class: "form-control", placeholder: "Image" %>
     </div>
     <div class="form-group">
-      <div class="input-field col s6">
-        <%= f.label :start_date, "Start Date", class: "lead text-white" %>
-        <%= f.date_field :start_date, class: "form-control", placeholder: "Start Date" %>
-      </div>
+      <%= f.label :start_date, "Start Date", class: "lead text-dark" %>
+      <%= f.date_field :start_date, class: "form-control", placeholder: "Start Date" %>
     </div>
     <div class="form-group">
-      <div class="input-field col s6">
-        <%= f.label :end_date, "End Date", class: "lead text-white" %>
-        <%= f.date_field :end_date, class: "form-control", placeholder: "End Date" %>
-      </div>
+      <%= f.label :end_date, "End Date", class: "lead text-dark" %>
+      <%= f.date_field :end_date, class: "form-control", placeholder: "End Date" %>
     </div>
     <div class="form-group">
-      <div class="input-field col s6">
-        <%= f.label :price, "Price", class: "lead text-white" %>
-        <%= f.number_field :price, class: "form-control", placeholder: "Price" %>
-      </div>
+      <%= f.label :price, "Price", class: "lead text-dark" %>
+      <%= f.number_field :price, class: "form-control", placeholder: "Price" %>
     </div>
     <%= f.submit "Submit", :class => "btn btn-success btn-block mt-5" %>
   <% end %>
+</div>
+
+<div class="card mb-3">
+  <h3 class="card-header">Card header</h3>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+  </div>
+  <img style="height: 200px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22318%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_158bd1d28ef%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_158bd1d28ef%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22129.359375%22%20y%3D%2297.35%22%3EImage%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Card image">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+  </ul>
+  <div class="card-body">
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+  <div class="card-footer text-muted">
+    Wow!
+  </div>
 </div>
