--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,50 @@
   </head>
 
   <body>
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">Amigos</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+            <ul class="my-2 my-lg-0 d-inline-block">
+              <% if user_signed_in? %>
+                <%= link_to "Log out", destroy_user_session_path, class: "text-white", method: :delete %>
+              <% else %>
+                <%= link_to "Log In", new_user_session_path, class: "text-white" %>
+              <% end %>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
     <div class="container-fluid">
+
       <%# flash messages %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
 
       <%= yield %>
     </div>
+
+    <footer class="col">
+
+    </footer>
   </body>
 </html>
