--- a/app/views/packages/show.html.erb
+++ b/app/views/packages/show.html.erb
@@ -1,2 +1,46 @@
 <h1>Packages#show</h1>
 <p>Find me in app/views/packages/show.html.erb</p>
+
+
+<div class="row">
+
+    <div class="col-4">
+
+      <div class="card">
+
+            <div class="card-header">
+                <h3><%= @package.name %></h3>
+            </div>
+
+            
+            <%= image_tag(@package.image, alt: "City Image", class: "card-img-top") %>
+          
+
+            <div class="card-body">
+                <p class="card-text"><%= @package.description %></p>
+
+                    <% if user_signed_in? %>
+                <% if current_user.role == "1" && current_user.id == @package.user_id %>
+                    <%= button_to 'Edit', edit_package_path(@package), method: :get, class: "btn btn-warning btn-sm", form: {style: 'display:inline-block;'}, data: { confirm: 'Do you want to edit this package?' } %>
+                    <%= button_to 'Destroy', @package, method: :delete, class: "btn btn-danger btn-sm", form: {style: 'display:inline-block;'}, data: { confirm: 'Are you sure?' } %>
+                <% elsif current_user.role == "0" %>
+                    <%= button_to 'Book', edit_package_path(@package), class: "btn btn-success btn-sm", form: {style: 'display:inline-block;'}, data: { confirm: 'Do you want to book this package?' } %>
+                <% else %>
+                    <% nil %>
+                <%end%>
+                <% else %>
+                <% nil %>
+                <%end%>
+
+            </div>
+
+            <div class="card-footer text-muted">
+                <%= @package.price %>
+            </div>
+
+      </div>
+      
+    </div>
+
+</div>
+<%= button_to "Back", :back, method: :get, form: {style: 'display:inline-block;'}, class: "btn btn-success btn-sm" %>
