--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">Amigos</a>
+          <a class="navbar-brand" href="/">Amigos</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -20,18 +20,33 @@
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
               </li>
             </ul>
+
+            <ul class="my-2 my-lg-0 d-inline-block">
+
+             <% if user_signed_in? %>
+              <% if current_user.role == "0" %>
+                <%= link_to 'Booking', bookings_path(@bookings), class: "text-white" %>
+              <% else %>
+                <%= link_to 'My packages', bookings_path(@bookings), class: "text-white" %>
+              <%end%>
+            <%end%>
+
+
+
             <ul class="my-2 my-lg-0 d-inline-block">
               <% if user_signed_in? %>
                 <%= link_to "Log out", destroy_user_session_path, class: "text-white", method: :delete %>
@@ -40,6 +55,7 @@
               <% end %>
             </ul>
           </div>
+
         </nav>
       </header>
 
