--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,44 +1,53 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="text-danger">
   <%= render "devise/shared/error_messages", resource: resource %>
+</div>
 
+<div class="w-25 mx-auto">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-  <div class="field">
-    <%= f.label :Full_Name %><br />
-    <%= f.text_field :name, autofocus: true %>
+  <div class="form-check form-check-inline mb-3">
+    <%= f.radio_button :role, "1", class: "form-check-input" %>
+    <%= f.label :role, 'Agent', class: "form-check-label", :value => '1' %>
+    <div class="w-25">
+      <%= f.radio_button :role, "0", class: "form-check-input" %>
+      <%= f.label :role, 'Customer', class: "form-check-label", :value => '0' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :Email_Address %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :Full_Name %><br />
+      <%= f.text_field :name, autofocus: true, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :Password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :Email_Address %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      <small class="form-text text-muted">We'll never share your email with anyone else. Trust us!</small>
+    </div>
 
-  <div class="field">
-    <%= f.label :Password_Confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :Password %>
+      <br />
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      <small class="form-text text-muted"><%= @minimum_password_length %> characters minimum</small>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :Password_Confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+    </div>
 
 
-  <div class="field">
-  <%= f.label :User_Type %><br/>
-    <%= f.check_box :role%>
-        <%= f.label :Agency %> 
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <div class="actions">
+      <%= f.submit "Sign up", class: "btn btn-success btn-block" %>
+    </div>
 
-<%= link_to "Back", :back %>
-<% end %>
+  <%= link_to "Back", :back %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
+
+<%# <%= render "devise/shared/links" %>
