--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
   </div>
 
     <div class="form-group">
-      <%= f.label :Full_Name %><br />
+      <%= f.label :Name %><br />
       <%= f.text_field :name, autofocus: true, class: "form-control" %>
     </div>
 
