Pair with @muneerabinhotan - add back button in index booking and fix the book button's path

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -22,10 +22,6 @@
     </div>
  
 </div>
-
-
-
-
-
-
+<br />
 <%end%>
+<%= button_to "Back", :back, method: :get, form: {style: 'display:inline-block;'}, class: "btn btn-success btn-sm" %>
