Update index page style - pair with @nouf1

--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -3,17 +3,26 @@
 
 <hr>
 <h1 class="display-4">Packages</h1>
-<%= button_to 'New Package', new_package_path, method: :get, class: "btn btn-primary btn-sm mx-auto", form: {style: 'display:inline-block;'}, data: { confirm: 'Do you want to edit this package?' } %>
+
+<% if user_signed_in? %>
+  <% if current_user.role == "1" %>
+    <div class="w-100 text-center">
+      <%= button_to 'New Package', new_package_path, method: :get, class: "btn btn-info mx-auto my-3", data: { confirm: 'Do you want to edit this package?' } %>
+    </div>
+  <% end %>
+<% end %>
+
 <div class="row">
   <% @packages.each do |package| %>
-    <div class="col-4">
-      <div class="card">
+    <div class="col-md-4 col-xs-12">
+      <div class="card my-4 mx-4">
         <div class="card-header">
           <h3><%= link_to package.name, package_path(package) %></h3>
+          <small class="text-muted">By <%= package.user.name %></small>
         </div>
         <%= image_tag(package.image, alt: "City Image", class: "card-img-top") %>
         <div class="card-body">
-            <p class="card-text"><%= package.description %></p>
+            <p class="card-text description-ellipsis"><%= package.description %></p>
 
             <% if user_signed_in? %>
               <% if current_user.role == "1" && current_user.id == package.user_id %>
@@ -30,7 +39,10 @@
         </div>
 
         <div class="card-footer text-muted">
-          <%= package.price %>
+          <%= package.start_date.strftime("%d %b %Y") %> — <%= package.end_date.strftime("%d %b %Y") %>
+        </div>
+        <div class="card-footer text-muted">
+          <%= package.price %> <small>SAR</small>
         </div>
 
       </div>
