--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,9 +61,20 @@
 
     <div class="container-fluid">
 
-      <%# flash messages %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <div class="w-100 text-center mt-5">
+        <%# flash messages %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <%if current_user%>
+          <h3>Hi <%= current_user.name %>, you are logged in as
+              <%if current_user.role == "0"%>
+                a Customer and you have <%=current_user.bookings.count%> <%if current_user.bookings.count == 1%> booking <%else%> bookings <%end%>
+              <%else%>
+                an Agent and you have <%=current_user.packages.count%> <%if current_user.packages.count == 1%> package <%else%> packages <%end%>
+              <%end%>
+          </h3>
+        <%end%>
+      </div>
 
       <%= yield %>
     </div>
