--- a/app/views/packages/show.html.erb
+++ b/app/views/packages/show.html.erb
@@ -1,7 +1,4 @@
 
-
-
-
 <div class="container bg-light">
 
 <h3 class= "text-center"> <%= @package.name %></h3>
@@ -19,7 +16,9 @@
   <dt class="col-sm-3">Description: </dt>
   <dd class="col-sm-9"><%= @package.description %></dd>
 
-  
+
+
+  <dt class="col-sm-3">Date: </dt>
 
   <dt class="col-sm-3">Price: </dt>
   <dd class="col-sm-9"><%= @package.price %></dd>
