--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,53 @@
  *= require_self
  */
 
+@import "bootstrap.min.css";
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
+*::-webkit-scrollbar {
+  width: 0.5em;
+  background-color: rgba(0, 0, 0, 0.75);
+
+}
+
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(128, 128, 128, 0.5);
+  -webkit-box-shadow: inset 0 0 5px rgba(128, 128, 128, 0.5);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(128, 128, 128, 0.5);
+  outline: 10px solid #80808080;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: calc(0.75rem + 0.25vw);
+  -webkit-font-smoothing: antialiased;
+}
+
+body {
+  background-color: rgba($color: #000000, $alpha: 0.1);
+}
+
+.card:hover {
+  transform: scale(1.050);
+}
+
+// .description-ellipsis {
+//   display: inline-block;
+//   width: 100%;
+//   white-space: nowrap;
+//   overflow: hidden !important;
+//   text-overflow: ellipsis;
+// }
