--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,29 +56,14 @@
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
 
-        <div class="w-50 mx-auto mb-2">
-          <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          <%if current_user%>
-            <strong>Hi <%= current_user.name %></strong>, you are logged in as
-              <%if current_user.role == "0"%>
-                a Customer and you have <%=current_user.bookings.count%> <%if current_user.bookings.count == 1%> booking <%else%> bookings <%end%>
-              <%else%>
-                an Agent and you have <%=current_user.packages.count%> <%if current_user.packages.count == 1%> package <%else%> packages <%end%>
-              <%end%>
-          <% end %>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-        </div>
       </div>
 
       <%= yield %>
     </div>
 
-    <footer class="container-fluid footer bg-dark py-3">
-      <div class="row">
-        <small>&copy; Copyright 2019, Amigos</small>
+    <footer class="container-fluid bg-primary py-4">
+      <div class="text-center">
+        <small>&copy; Copyright 2019, ❮❯ by Amigos</small>
       </div>
     </footer>
   </body>
