--- a/app/views/packages/_form.html.erb
+++ b/app/views/packages/_form.html.erb
@@ -1,12 +1,8 @@
-<div class="w-25 mx-auto">
+<div class="w-50 mx-auto">
   <%= form_for @package do |f| %>
     <div class="form-group">
       <%= f.label :name, "Name", class: "lead text-dark" %>
       <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :description, "Description", class: "lead text-dark" %>
-      <%= f.text_field :description, class: "form-control", placeholder: "Description" %>
     </div>
     <div class="form-group">
       <%= f.label :image, "Image", class: "lead text-dark" %>
@@ -24,6 +20,10 @@
       <%= f.label :price, "Price", class: "lead text-dark" %>
       <%= f.number_field :price, class: "form-control", placeholder: "Price" %>
     </div>
-    <%= f.submit "Submit", :class => "btn btn-success btn-block mt-5" %>
+    <div class="form-group">
+      <%= f.label :description, "Description", class: "lead text-dark" %>
+      <%= f.text_area :description, class: "form-control", placeholder: "Description" %>
+    </div>
+    <%= f.submit "Submit", :class => "btn btn-success btn-block my-5" %>
   <% end %>
 </div>
