--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,8 +60,10 @@
       <%= yield %>
     </div>
 
-    <footer class="container-fluid bg-primary py-4">
+    <footer class="container-fluid bg-primary py-3 mt-5">
       <div class="text-center">
+        <%= image_tag 'https://media.giphy.com/media/dYUslDahf6Uw71gH3t/giphy.gif', size: "100x100", class: "amigos-logo" %>
+        <br>
         <small>&copy; Copyright 2019, ❮❯ by Amigos</small>
       </div>
     </footer>
