--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,6 +71,19 @@ body {
   transform: scale(1.25);
 }
 
+table {
+  background-color: rgba($color: #ffffff, $alpha: 0.1);
+  border: rgba($color: #000000, $alpha: 0.1) 0.1px solid ;
+}
+
+table th {
+  background-color: rgba($color: #ffffff, $alpha: 0.25);
+}
+
+table td {
+  background-color: rgba($color: #ffffff, $alpha: 0.5);
+}
+
 // .description-ellipsis {
 //   display: inline-block;
 //   width: 100%;
