--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,11 +59,13 @@ body {
 
 .navbar-nav li:last-child {
   border-left: rgba($color: #ffffff, $alpha: 0.1) 1px solid;
-  padding-left: 2.5em;
+  padding-left: 5em;
+  margin-left: 2.5em;
+  color:red;
 }
 
 .nav-link:hover {
-  padding: 1.2em;
+  padding: 1.1em;
   background-color: rgba($color: #ffffff, $alpha: 0.1);
 }
 
