--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,23 @@
-<h2>Forgot your password?</h2>
+<h1 class="lead text-muted text-center mt-5">Forgot your password?</h1>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="w-50 mx-auto">
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="form-group">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      <small>We will send you an email to reset your password</small>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Reset password", class: "btn btn-success btn-block mt-5" %>
+    </div>
+  <% end %>
+
+  <div class="text-center my-5">
+    <%= link_to "← Back", :back, class: "btn btn-primary btn-sm", form: {style: 'display:inline-block;'} %>
+    <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-sm", form: {style: 'display:inline-block;'} %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
