--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <%= image_tag 'https://media.giphy.com/media/dYUslDahf6Uw71gH3t/giphy.gif', size: "100x100", class: "amigos-logo" %>
-          <a class="navbar-brand" href="/">Amigos</a>
+          <a class="navbar-brand mx-lg-5" href="/">Amigos</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -49,12 +49,10 @@
 
     <div class="container-fluid">
 
-      <div class="w-100 text-center my-2">
-
+      <div class="w-100 text-center my-4">
         <%# flash messages %>
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
-
       </div>
 
       <%= yield %>
