--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,6 @@
 
 <div class="w-50 mx-auto">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-
     <div class="text-center">
       <div class="form-check form-check-inline my-4">
         <%= f.radio_button :role, "1", class: "form-check-input" %>
@@ -22,7 +21,8 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :Email_Address %><br />
+      <%= f.label :Email_Address %>
+      <br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
       <small class="form-text text-muted">We'll never share your email with anyone else. Trust us!</small>
     </div>
@@ -42,7 +42,6 @@
     <div class="actions">
       <%= f.submit "Sign up", class: "btn btn-success btn-block mt-5" %>
     </div>
-
   <% end %>
 
   <div class="text-center my-5">
